--- a/src/pages/Playground/index.less
+++ b/src/pages/Playground/index.less
@@ -18,6 +18,8 @@
         flex: 1;
         height: 100%;
         background-color: #f0f0f0;
+        width: auto;
+        min-width: 0;
       }
 
       &__run-button {
@@ -28,6 +30,8 @@
         flex: 1;
         height: 100%;
         overflow-y: auto;
+        width: auto;
+        min-width: 0;
       }
     }
   }
